--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
-/node_modules
-Icon
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+
+## General ##
+
+# vscode
+.vscode/
+
+
+## React Frontend ##
+
+# dependencies
+node_modules/
+
+# testing
+coverage/
+
+# production
+build/
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+## Python Backend ##
+
+# python
+env/
+__pycache__/
+db.sqlite3
