--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "ajv": "^6.0.0",
     "axios": "^0.17.1",
+    "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
     "shortid": "^2.2.8"
   }
