--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ajv": "^6.0.0",
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
+    "deck-of-cards": "^0.1.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
