Add training module and refactor tests

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server-dev": "python3 backend/manage.py runserver 0:3001",
     "sass-dev": "sass --watch src:src/styles --sourcemap=none",
     "test-backend": "python3 backend/manage.py test backend -v 2",
+    "training": "python3 backend/api/training.py",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
