--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "big-2",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Big 2",
   "author": "Catherine Han",
   "license": "",
@@ -15,6 +15,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node" : ">=8.10.0"
   },
   "dependencies": {
     "ajv": "^6.0.0",
