--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "Catherine Han",
   "license": "",
   "private": true,
+  "proxy": "http://localhost:3001",
   "scripts": {
     "server-dev": "python3 backend/manage.py runserver 0:3001",
     "server-prod": "gunicorn --chdir backend backend.wsgi",
+    "migrate": "python3 backend/manage.py migrate",
     "sass-dev": "sass --watch src:src/styles --sourcemap=none",
     "test-backend": "python3 backend/manage.py test backend -v 2",
     "training": "python3 backend/api/training.py",
